# auto-subs-tui

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs
src/audio/: extractor.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: burn.rs  config.rs  edit.rs  extract.rs  mod.rs  process.rs  transcribe.rs
src/subtitle/: burner.rs  generator.rs  mod.rs  srt.rs
src/ui/: done.rs  editor.rs  file_picker.rs  home.rs  mod.rs  progress.rs  style.rs
src/utils/: mod.rs
