[package]
name = "auto-subs-tui"
version = "0.1.0"
edition = "2021"
description = "TUI app for creating and editing video subtitles"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# FFmpeg operations  
ffmpeg-sidecar = "2.0"

# Speech-to-text
whisper-rs = "0.14"

# Subtitle handling
srtlib = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "5.0"
hound = "3.5"  # WAV file reading for whisper
ureq = "2.9"   # HTTP client for model download

[target.'cfg(unix)'.dependencies]
libc = "0.2"
